deployments/namespace.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: nifi
  labels:
    name: nifi
