deployments/10-stateful.yml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: nifi
  namespace: nifi
  labels:
    name: nifi
    app: nifi
spec:
  serviceName: nifi
  replicas: 3
  selector:
    matchLabels:
      app: nifi
  template:
    metadata:
      labels:
        app: nifi
    spec:
      # affinity:
      #   podAntiAffinity:
      #     requiredDuringSchedulingIgnoredDuringExecution:
      #       - topologyKey: "kubernetes.io/hostname"
      #         labelSelector:
      #           matchLabels:
      #             app: nifi
      containers:
      - name: nifi
        image: apache/nifi:latest
        ports:
        - containerPort: 8080
          name: nifi
        - containerPort: 8082
          name: cluster
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: zookeeper
  namespace: nifi
  labels:
    name: zookeeper
    app: zookeeper
spec:
  serviceName: zookeeper
  replicas: 1
  selector:
    matchLabels:
      app: zookeeper
  template:
    metadata:
      labels:
        app: zookeeper
    spec:
      # affinity:
      #   podAntiAffinity:
      #     requiredDuringSchedulingIgnoredDuringExecution:
      #       - topologyKey: "kubernetes.io/hostname"
      #         labelSelector:
      #           matchLabels:
      #             app: zookeeper
      containers:
      - name: zookeeper
        image: zookeeper:latest
        ports:
        - containerPort: 2181
          name: zk
        - containerPort: 5111
          name: cmd
