deployments/20-services.yml
---
apiVersion: v1
kind: Service
metadata:
  name: nifi-0
  namespace: nifi
  labels:
    app: nifi
spec:
  type: NodePort
  selector:
    app: nifi
    "statefulset.kubernetes.io/pod-name": nifi-0
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
    name: nifi
  - protocol: TCP
    port: 8082
    targetPort: 8082
    name: cluster
---
apiVersion: v1
kind: Service
metadata:
  name: nifi-1
  namespace: nifi
  labels:
    app: nifi
spec:
  type: NodePort
  selector:
    app: nifi
    "statefulset.kubernetes.io/pod-name": nifi-1
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
    name: nifi
  - protocol: TCP
    port: 8082
    targetPort: 8082
    name: cluster
---
apiVersion: v1
kind: Service
metadata:
  name: nifi-2
  namespace: nifi
  labels:
    app: nifi
spec:
  type: NodePort
  selector:
    app: nifi
    "statefulset.kubernetes.io/pod-name": nifi-2
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
    name: nifi
  - protocol: TCP
    port: 8082
    targetPort: 8082
    name: cluster
---
apiVersion: v1
kind: Service
metadata:
  name: zookeeper
  namespace: nifi
  labels:
    app: zookeeper
spec:
  type: ClusterIP
  selector:
    app: zookeeper
    "statefulset.kubernetes.io/pod-name": zookeeper-0
  ports:
  - protocol: TCP
    port: 2181
    targetPort: 2181
    name: zk
  - protocol: TCP
    port: 5111
    targetPort: 5111
    name: cmd
