deployments/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: nifi
  namespace: nifi
  labels:
    app: nifi
  annotations:
    app.kubernetes.io/name: nifi
    app.kubernetes.io/part-of: nifi
spec:
  type: ClusterIP
  SessionAffinity: ClusterIP
  selector:
    app: nifi
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
    name: nifi
  - protocol: TCP
    port: 8082
    targetPort: 8082
    name: cluster
---
apiVersion: v1
kind: Service
metadata:
  name: zookeeper
  namespace: nifi
  labels:
    app: zookeeper
  annotations:
    app.kubernetes.io/name: zookeeper
    app.kubernetes.io/part-of: nifi
spec:
  type: ClusterIP
  SessionAffinity: ClusterIP
  selector:
    app: zookeeper
    "statefulset.kubernetes.io/pod-name": zookeeper-0
  ports:
  - protocol: TCP
    port: 2181
    targetPort: 2181
    name: zk
  - protocol: TCP
    port: 5111
    targetPort: 5111
    name: cmd
