deployments/30-ingress.yml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nifi
  namespace: nifi
  annotations:
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: nifi-basic-auth
    nginx.ingress.kubernetes.io/auth-realm: "Authentication Required"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      server_tokens off;
spec:
  rules:
  - host: nifi.saidsef.co.uk
    http:
      paths:
      - path: /
        backend:
          serviceName: nifi-0
          servicePort: 8080
